src/test/ui/hrtb/hrtb-conflate-regions.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'a` due to conflicting requirements
  --> $DIR/hrtb-conflate-regions.rs:28:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); } //~ ERROR
   |          ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: first, the lifetime cannot outlive lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:11), 'a) })...
   = note: ...but the lifetime must also be valid for lifetime RePlaceholder(Placeholder { universe: U1, name: BrNamed(crate0:DefIndex(1:12), 'b) })...
   = note: ...so that the types are compatible:
           expected Foo<(&'a isize, &'b isize)>
              found Foo<(&isize, &isize)>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0495`.
